# Gomoku

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: FindSDL2.cmake
src/gomobot/: searcher.cpp  searcher.h
src/gomogui/: colors.h  eventhandler.cpp  eventhandler.h  main.cpp  main.h
src/gomogui/utils/: extradraw.h
src/gomolib/: board.cpp  board.h  gomolib.h  types.h
